refactor: harden runtime and texture synchronization